Fix text wrapping

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -237,6 +237,7 @@ button {
     list-style: none;
     margin: 0;
     padding: 0;
+    white-space: nowrap;
 
     a {
       display: block;
